# TritPack

./: .gitignore  CAPABILITIES.md  Cargo.toml  LOCAL_MODELS_GUIDE.md  README.md  pyproject.toml
.github/workflows/: release-macos.yml
desktop/app/: Cargo.toml
desktop/app-core/: Cargo.toml
desktop/app-core/src/: bootstrap.rs  lib.rs
desktop/app/src/: main.rs
desktop/conversion/: Cargo.toml
desktop/conversion/src/: lib.rs
desktop/runtime-api/: Cargo.toml
desktop/runtime-api/src/: lib.rs
desktop/runtime-llamacpp/: Cargo.toml
desktop/runtime-llamacpp/src/: lib.rs
desktop/ui-slint/: Cargo.toml  build.rs
desktop/ui-slint/src/: lib.rs
desktop/ui-slint/ui/: app-window.slint
docs/: native_runtime_follow_on.md
integration/: gguf_patcher.py  llamacpp_shim.py  ollama_proxy.py  transformers_shim.py  tritpack_loader.py
packaging/macos/: Info.plist  bootstrap_python_runtime.sh  build_app_bundle.sh  build_app_icon.sh  build_dmg.sh  build_python_wheelhouse.sh  notarize_app.sh  sign_app.sh  vendor_llamacpp.sh
python/tritpack/: __init__.py  desktop_worker.py
python/tritpack/backends/: __init__.py  gguf_backend.py  numpy_backend.py
python/tritpack/benchmark/: __init__.py  __main__.py  memory.py  quality.py  speed.py
python/tritpack/core/: __init__.py  dequantizer.py  packing.py  quantizer.py  tiers.py
python/tritpack/model/: __init__.py  calibration.py  layer.py  tensor.py
resources/llama.cpp/: manifest.toml
resources/python/: runtime-manifest.toml
resources/python/worker/: desktop_worker.py
rust/: Cargo.toml
rust/benches/: criterion_benches.rs
rust/src/: ffi.rs  lib.rs  packing.rs  quantizer.rs
tests/benchmarks/: bench_inference_sim.py  bench_memory.py  bench_packing.py  bench_quantization.py
tests/fixtures/: sample_weights.py  synthetic_tensors.py
tests/integration/: test_full_pipeline.py  test_gguf_compat.py  test_layer_sim.py
tests/unit/: test_backends_and_benchmarks.py  test_dequantizer.py  test_packing.py  test_quantizer.py  test_tiers.py
tests/verification/: test_rust_python_parity.py
