[workspace]
members = [
    "rust",
    "desktop/runtime-api",
    "desktop/app-core",
    "desktop/conversion",
    "desktop/runtime-llamacpp",
    "desktop/ui-slint",
    "desktop/app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6.0"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slint = { version = "1.15", default-features = false, features = ["std", "backend-winit", "renderer-femtovg", "compat-1-2"] }
slint-build = "1.15"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.8"
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }
