[package]
name = "tritpack-app-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true
uuid.workspace = true
tritpack-runtime-api = { path = "../runtime-api" }

[dev-dependencies]
tempfile.workspace = true
