[package]
name = "tritpack-conversion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tritpack-runtime-api = { path = "../runtime-api" }
tritpack-native = { path = "../../rust", package = "tritpack-native" }

[dev-dependencies]
tempfile.workspace = true
