[package]
name = "tritpack-runtime-llamacpp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
uuid.workspace = true
tritpack-runtime-api = { path = "../runtime-api" }
tritpack-conversion = { path = "../conversion" }
